--- a/docassemble/USCISApplications/data/questions/main.yml
+++ b/docassemble/USCISApplications/data/questions/main.yml
@@ -82,9 +82,9 @@ code: |
   nav.set_section("section_retainer")
   agrees_to_retainer
   set_progress(10)
-  for user in users:
-    if user.age_in_years() > 13:
-      user.signature
+  # for user in users:
+  #   if user.age_in_years() > 13:
+  #     user.signature
   nav.set_section("section_screener")
   application_kind
   change_kind
@@ -121,10 +121,15 @@ code: |
       user.signpost
       if application_kind == "ead_and_tps":
         user.is_first_TPS_application
+        user.is_first_EAD_application
+      else:
+        user.is_first_EAD_application
       if user.age_in_years() < 14:
         user.parent
       user.user_reads_english
       if application_kind == "ead_and_tps":
+        user.ethnicity
+      else:
         user.sex
       user.alternate_birthdates.gather()
       user.address.address
@@ -159,7 +164,9 @@ code: |
     if change_kind == "coa_only":
       removal.address.address
     else:
-      immigration_judge.name.first
+      for idx,user in enumerate(users):
+        if user.application_is_approved:
+            user.immigration_judge.name.first
       # representative.type
       # representative.name.first
       removal.address.address
@@ -587,13 +594,13 @@ subquestion: |
   On the next screens, we'll review the limited scope retainer.
 continue button field: review_initial_user_list
 ---
-id: signatures for users i
-question: |
-  ${ users[i].name.first }, please sign here to agree / firma aqui para aceptar
-signature: users[i].signature
-under: |
-  ${ users[i] }
-required: False
+# id: signatures for users i
+# question: |
+#   ${ users[i].name.first }, please sign here to agree / firma aqui para aceptar
+# signature: users[i].signature
+# under: |
+#   ${ users[i] }
+# required: False
 ---
 id: kind of interview
 question: |
@@ -1028,6 +1035,9 @@ subquestion: |
   ${ action_button_html(url_of("new_session"), label="Start a new application", icon="square-plus", size="lg", color="secondary") }
 ---
 objects:
+  - users[i].g_1145_attachment: ALDocument.using(title=f"{users[i]} - Electronic Notification", filename=space_to_underscore(f"{users[i]} - Electronic Notification"), has_addendum=False)
+---
+objects:
   - users[i].limited_scope_retainer: ALDocument.using(title=f"{users[i]} - Limited Scope Retainer", filename=space_to_underscore(f"{users[i]} - Limited Scope Retainer"), has_addendum=False)
 ---
 objects:
@@ -1068,22 +1078,28 @@ objects:
 # ---
 # code: |
 #   users[i].applicant_intake_worksheet.enabled = users[i].application_is_approved
----
-objects:
-  - users[i].fee_waiver_ead: ALDocument.using(title=f"{users[i]} - Fee Waiver Request", filename=space_to_underscore(f"{users[i]} - Fee Waiver Request"), has_addendum=False)
----
+# ---
+# objects:
+#   - users[i].fee_waiver_ead: ALDocument.using(title=f"{users[i]} - Fee Waiver Request", filename=space_to_underscore(f"{users[i]} - Fee Waiver Request"), has_addendum=False)
+# ---
 objects:
   - users[i].cover_page: ALDocument.using(title=f"Cover Page", filename="cover_page", has_addendum=False, enabled=True)
   - users[i].ending_page: ALDocument.using(title=f"Ending Page", filename="ending_page", has_addendum=False, enabled=True)
 ---
-code: |
-  users[i].fee_waiver_ead.enabled = users[i].application_is_approved and application_kind == "ead_only"
+# code: |
+#   users[i].fee_waiver_ead.enabled = users[i].application_is_approved and application_kind == "ead_only"
 ---
 objects:
-  - users[i].fee_waiver_tps: ALDocument.using(title=f"{users[i]} - Fee Waiver Request", filename=space_to_underscore(f"{users[i]} - Fee Waiver Request"), has_addendum=False)
+  - users[i].fee_waiver: ALDocument.using(title=f"{users[i]} - Fee Waiver Request", filename=space_to_underscore(f"{users[i]} - Fee Waiver Request"), has_addendum=False)
 ---
 code: |
-  users[i].fee_waiver_tps.enabled = users[i].application_is_approved and not application_kind == "ead_only"
+  users[i].fee_waiver.enabled = users[i].application_is_approved
+---
+# objects:
+#   - users[i].fee_waiver_tps: ALDocument.using(title=f"{users[i]} - Fee Waiver Request", filename=space_to_underscore(f"{users[i]} - Fee Waiver Request"), has_addendum=False)
+# ---
+# code: |
+#   users[i].fee_waiver_tps.enabled = users[i].application_is_approved and not application_kind == "ead_only"
 ---
 objects:
   - al_user_bundle: ALDocumentBundle.using(title="All documents to print and file", filename="all_documents", enabled=True, elements=[])
@@ -1092,6 +1108,7 @@ objects:
         users[i].ead_legal_screener,
         users[i].tps_legal_screener,
         users[i].limited_scope_retainer,
+        users[i].g_1145_attachment,
         users[i].i_821_attachment,
         users[i].military_service_addendum,
         users[i].transit_through_ca_addendum,
@@ -1100,12 +1117,11 @@ objects:
         users[i].smuggling_addendum,
         users[i].continuous_residence_addendum,
         users[i].tps_yes_answer_addendum,
-        users[i].fee_waiver_tps,
+        users[i].fee_waiver,
         users[i].i_765_attachment,
         users[i].ead_interim_parole_addendum,
         users[i].ead_order_of_supervision_addendum,
         users[i].ead_asylum_checklist,
-        users[i].fee_waiver_ead,
         users[i].cov_coa_instructions,
         users[i].eoir_61_cov,
         users[i].motion_addendum,
@@ -1118,6 +1134,9 @@ code: |
     users[i].limited_scope_retainer.enabled = True
   else:
     users[i].limited_scope_retainer.enabled = False
+---
+code: |
+  users[i].g_1145_attachment.enabled = users[i].application_is_approved
 ---
 code: |
   users[i].military_service_addendum.enabled = users[i].application_is_approved and (application_kind != "ead_only" and users[i].addenda.get("military_service"))
@@ -1235,6 +1254,20 @@ attachment:
   docx template file: TPS_legal_screener_AID_edited.docx
   skip undefined: True
 ---
+attachment:
+  variable name: users[i].g_1145_attachment[j]
+  name: ${ users[i] } - Electronic Notification
+  filename: ${ space_to_underscore(f"{users[i]} - Electronic Notification") }
+  pdf template file: G-1145.pdf
+  skip undefined: True
+  editable: False
+  fields:
+    - "users1_name_last": ${ users[i].name.last }
+    - "users1_name_first": ${ users[i].name.first }
+    - "users1_name_middle": ${ users[i].name.middle }
+    - "users1_mobile_number": ${ users[i].mobile_number }
+    - "users1_email": ${ users[i].email }
+---
 reconsider:
   - children_for_retainer
 attachment:
@@ -1244,19 +1277,154 @@ attachment:
   docx template file: Limited_Scope_Retainer.docx
   skip undefined: True
 ---
-attachment:
-  variable name: users[i].fee_waiver_tps[j]
-  name: ${ users[i] } - Fee Waiver Request
-  filename: ${ space_to_underscore(f"{users[i]} - Fee Waiver Request") }
-  docx template file: Fee_Waiver_Cover_Letter_TPS.docx
-  skip undefined: True
+# attachment:
+#   variable name: users[i].fee_waiver_tps[j]
+#   name: ${ users[i] } - Fee Waiver Request
+#   filename: ${ space_to_underscore(f"{users[i]} - Fee Waiver Request") }
+#   docx template file: Fee_Waiver_Cover_Letter_TPS.docx
+#   skip undefined: True
+# ---
+# attachment:
+#   variable name: users[i].fee_waiver_ead[j]
+#   name: ${ users[i] } - Fee Waiver Request
+#   filename: ${ space_to_underscore(f"{users[i]} - Fee Waiver Request") }
+#   docx template file: Fee_Waiver_Cover_Letter_EAD.docx
+#   skip undefined: True
 ---
 attachment:
-  variable name: users[i].fee_waiver_ead[j]
+  variable name: users[i].fee_waiver[j]
   name: ${ users[i] } - Fee Waiver Request
   filename: ${ space_to_underscore(f"{users[i]} - Fee Waiver Request") }
-  docx template file: Fee_Waiver_Cover_Letter_EAD.docx
+  pdf template file: I-912.pdf
   skip undefined: True
+  editable: False
+  fields:
+    - "current_immigration_status": |
+        % if users[i].current_immigration_status == "other":
+        ${ users[i].other_immigration_status }
+        % else:
+        ${ users[i].current_immigration_status }
+        % endif 
+    - "users1_name_last": ${ users[i].name.last }
+    - "users1_name_first": ${ users[i].name.first }
+    - "users1_name_middle": ${ users[i].name.middle }
+    - "users1_previous_names1_last": ${ users[i].aliases.item(0).last }
+    - "users1_previous_names1_first": ${ users[i].aliases.item(0).first }
+    - "users1_previous_names1_middle": ${ users[i].aliases.item(0).middle }
+    - "users1_previous_names2_last": ${ users[i].aliases.item(1).last }
+    - "users1_previous_names2_first": ${ users[i].aliases.item(1).first }
+    - "users1_previous_names2_middle": ${ users[i].aliases.item(1).middle }
+    - "users1_a_number": ${ users[i].a_number }
+    - "users1_uscis_account_number": ${ users[i].uscis_account_number }
+    - "users1_birthdate": ${ users[i].birthdate.format('MM/dd/yyyy') }
+    - "users1_ssn": |
+        % if users[i].has_ssn:
+        ${ users[i].ssn }
+        % endif
+    - "is_married": ${ users[i].marital_status == 'married' }
+    - "is_unmarried": ${ users[i].marital_status == 'single, never married' }
+    - "is_divorced": ${ users[i].marital_status == 'divorced' }
+    - "is_widowed": ${ users[i].marital_status == 'widowed' }
+    - "is_separated": ${ users[i].marital_status == 'separated' }
+    - "is_annulled": ${ users[i].marital_status == 'marriage annulled' }
+    - "is_other_marital_status": ${ users[i].marital_status == 'other' }
+    - "marital_status_other_explanation": ${ users[i].marital_status_other }
+    - "users1_name": ${ users[i].name.full(middle="full") }
+    - "forms_filed": |
+        % if application_kind == "ead_only":
+        I-765
+        % else:
+        I-821 & I-765
+        % endif
+    # Part 7
+    - "user_reads_english": ${ users[i].user_reads_english }
+    - "user_used_interpreter": ${ users[i].user_used_interpreter }
+    - "interpreter_spoke_language": |
+        % if interpreter_present:
+        ${ interpreter.language }
+        % endif
+    - "interpreter_spoke_language__1": |
+        % if interpreter_present:
+        ${ interpreter.language }
+        % endif
+    - "user_used_preparer": True
+    - "preparer_name_applicant_statement": ${ preparer }
+    - "users1_phone_number": ${ users[i].phone_number}
+    - "users1_mobile_number": ${ users[i].mobile_number }
+    - "users1_email": ${ users[i].email }
+    - "signature_date": ${ signature_date.format('MM/dd/yyyy') }
+    # Part 8
+    - "interpreter_name_last": |
+        % if interpreter_present:
+        ${ interpreter.name.last }
+        % endif
+    - "interpreter_name_first": |
+        % if interpreter_present:
+        ${ interpreter.name.first }
+        % endif
+    - "interpreter_organization": |
+        % if interpreter_present:
+        ${ interpreter.organization }
+        % endif
+    - "interpreter_mailing_address_address": |
+        % if interpreter_present:
+        ${ interpreter.address.address }
+        % endif
+    - "interpreter_mailing_address_unit": |
+        % if interpreter_present:
+        ${ interpreter.address.unit }
+        % endif
+    - "interpreter_mailing_address_city": |
+        % if interpreter_present:
+        ${ interpreter.address.city }
+        % endif
+    - "interpreter_mailing_address_state": |
+        % if interpreter_present:
+        ${ interpreter.address.state }
+        % endif
+    - "interpreter_mailing_address_zip":  |
+        % if interpreter_present:
+        ${ interpreter.address.zip }
+        % endif
+    - "interpreter_mailing_address_country": ${ 'USA' if interpreter_present else '' }
+    - "interpreted_into_language": |
+        % if interpreter_present:
+        ${ interpreter.language }
+        % endif 
+    - "signature_date__1": |
+        % if interpreter_present: 
+        ${ signature_date.format('MM/dd/yyyy') }
+        % endif
+    # Part 9
+    - "preparer_name_first": ${ preparer.name.first }
+    - "preparer_name_last": ${ preparer.name.last }
+    - "preparer_is_attorney_yes": ${ preparer_is_attorney }
+    - "preparer_is_attorney_no": ${ not preparer_is_attorney }
+    - "preparer_full_rep": No
+    - "preparer_limited_rep": ${ preparer_is_attorney }
+    - "preparer_mailing_address_address": |
+        % if preparer.address.address:
+        ${ preparer.address.address }
+        % endif
+    - "preparer_mailing_address_unit": |
+        % if preparer.address.unit:
+        ${ preparer.address.unit }
+        % endif
+    - "preparer_mailing_address_city": |
+        % if preparer.address.city:
+        ${ preparer.address.city }
+        % endif
+    - "preparer_mailing_address_state": |
+        % if preparer.address.state:
+        ${ preparer.address.state }
+        % endif
+    - "preparer_mailing_address_zip": |
+        % if preparer.address.zip:
+        ${ preparer.address.zip }
+        % endif
+    - "preparer_mailing_address_country": 'USA'
+    - "signature_date__2": ${ signature_date.format('MM/dd/yyyy') }
+
 ---
 code: |
   def uscis_countries_list():
